// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Speech should match snapshot received 1`] = `
<div
  className="speech received"
>
  <div
    className="bubble"
  >
    <p>
      I love puggs!
    </p>
  </div>
</div>
`;

exports[`Speech should match snapshot sent 1`] = `
<div
  className="speech sent"
>
  <div
    className="bubble"
  >
    <p>
      I love kittens!
    </p>
  </div>
</div>
`;
